--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleanfolio",
+  "name": "chayanrastogi",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://chayanrastogi.github.io/Personal-Portfolio",
